--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -1666,107 +1666,107 @@ stories:
   domain: http://www.yorknewstimes.com/
   link: https://www.yorknewstimes.com/news/trending/the-books-to-read-to-get-you-into-the-fourth/article_a2e87e0b-f004-5470-9477-b305db252e7e.html
 images:
-- name: downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-- name: oldhouse-granaryfield-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-paper.jpg
-- name: machine-road-machine-road-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit.jpg
-- name: dragon-desert-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-horiz-circuit.jpg
-- name: sand-hand-sand-hand-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-horiz-circuit.jpg
-- name: berlinwall-DSC-0084-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
-- name: fence-fence-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
-- name: art-museum-art-museum-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-neo-instinct.jpg
-- name: udnie-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4746.jpg
-- name: white-house-whitehouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-pablo-blue.jpg
-- name: oldsmallboat-oldsmallboat-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-marcel-duchamp.jpg
-- name: sand-hand-sand-hand-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-satan-red.jpg
-- name: windowmountain-window-mountain-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-pablo-blue.jpg
-- name: old-gas-pumps-oldgaspumps-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-paper.jpg
-- name: capital-battle-capitolbattle-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-soul.jpg
-- name: oldtrain-oldtrain-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-propaganda-leaflets.jpg
-- name: power-lines-power-lines-empty-space-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-neo-instinct.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-storm.jpg
-- name: dc-statue-dcstatue-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kand-two.jpg
-- name: dragon-desert-desert-dragon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
-- name: gears-4882162452-fa3126b38d-b-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crunch-paper.jpg
-- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-- name: subway-subway-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
-- name: oldroad-old-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
-- name: white-house-whitehouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
-- name: amusement-park-amusement-park-2-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-feed-people.jpg
-- name: art-museum-art-museum-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-spagetti-accident.jpg
-- name: subway-subway-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-umberto-bocc.jpg
-- name: sand-hand-sand-hand-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
-- name: dragon-desert-desert-dragon-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
-- name: oldcabin-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
-- name: rockingchair-face-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-circuit.jpg
-- name: razorcliff-razorcliff-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-three.jpg
-- name: rockingchair-face-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2.jpg
-- name: castle-wall-DSC-0067-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
-- name: power-lines-power-lines-empty-space-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
-- name: rockingchair-face-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-constitution.jpg
-- name: locked-up-steam-lock-up-steam-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-matrix.jpg
-- name: aws-s3-stories-raven-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-raven-fence.jpg
-- name: san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-- name: machine-road-machine-road-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit.jpg
-- name: old-church-oldchurch-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
-- name: gears-4882162452-fa3126b38d-b-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crafty-painting.jpg
-- name: razorwire-DSC-0080-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alberto-giacometti.jpg
-- name: white-house-lawn-white-house-lawn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-hot-spicy.jpg
-- name: oldbarn-oldbarn-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-wols.jpg
-- name: nyc-flag-nycflag-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alberto-giacometti.jpg
-- name: old-house-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
-- name: mistywoods-babyfoot-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-cinnamon-rolls.jpg
-- name: old-school-house-old-schoolhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-space-pizza.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+- name: status-berlin-status-berlin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-aqua.jpg
+- name: carry-load-carryload-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
+- name: aws-s3-bluelake-bluelake-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-600.jpg
+- name: ellis-island-ellisisland-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
+- name: beach-rocks-beach-rocks-currents-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gred-mash.jpg
+- name: bluelake-blue-brush-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
+- name: docks-docks-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
+- name: server-cloud-server-racks-door-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sunday.jpg
+- name: gypsy-wagon-gypsywagon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-wols.jpg
+- name: oldbarn-oldbarn-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-yellow-collage.jpg
+- name: downtown-los-angeles-downtown-la-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dry-skin.JPG
+- name: subway-subway-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-asteroids.jpg
+- name: server-cloud-server-racks-door-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kand-two.jpg
+- name: power-lines-power-lines-empty-space-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-jap-dys-1.jpg
+- name: blossombar-yellow-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-50-62.jpg
+- name: server-cloud-server-racks-clouds-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-neo-instinct.jpg
+- name: capital-battle-capitolbattle-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
+- name: yosemite-yosemite-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
+- name: wind-mills-windmills-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kand-two.jpg
+- name: ellis-island-ellis-island-room-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-blocks.jpg
+- name: store-on-corner-oldcabin-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-nazi-poster.jpg
+- name: oldhouse-granaryfield-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smoking-cigarette.jpg
+- name: stories-slashdb-sql-pass-through-mode.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-slashdb-sql-pass-through-mode.png
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: death-valley-death-valley-national-park-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+- name: art-museum-art-museum-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit-2.jpg
+- name: status-berlin-status-berlin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
+- name: file-00_00_00_00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_00_00.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-aqua.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-aqua.png
+- name: cargo-ship-cargo-ship-on-sea-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-three.jpg
+- name: berlinwall-DSC-0084-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-brush.jpg
+- name: trucksilo-trucksilo-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
+- name: oldhousecars-house-old-cars-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
+- name: old-cabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
+- name: old-house-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: carry-load-carryload-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-space-pizza.jpg
+- name: miamibeach-miamibeach-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-oily-mcoilface.jpg
+- name: bluelake-deep-connections-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-38-67.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: nyc-flag-nycflag-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-dream.jpg
+- name: bluelake-creativity-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
+- name: old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+- name: container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+- name: oldhotel-oldhotel-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
+- name: containership-containership-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-far-away.jpg
+- name: subway-subway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
+- name: blossombar-dark-rain-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-24-99.jpg
+- name: oldhouse-granaryfield-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-rain.jpg
+- name: castle-wall-DSC-0067-far-away.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-far-away.JPG
 ---
 Common Pet Dangers Ahead Of Independence Day.&nbsp;Haygood Honored For His Helping Hand.&nbsp;Winning Numbers Drawn In '2 By 2' Game.&nbsp;Ski Jumpers Compete With The Heat On Howelsen Hill.&nbsp;British Singer Joss Stone Says She Was Deported From Iran.&nbsp;Man Throws Bicycle At Officer After Using It To Block Roadway.&nbsp;Nola, Bruce Power Phillies Past Braves.&nbsp;Events In Mercer County For Independence Day And Beyond.&nbsp;
